// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu closed 1`] = `
<div
  class="Menu__Container-sc-mw2r80-0 jCxKaQ"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu custom color 1`] = `
<div
  class="Menu__Container-sc-mw2r80-0 gxMOhP"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu custom duration 1`] = `
<div
  class="Menu__Container-sc-mw2r80-0 fNZZph"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu default 1`] = `
<div
  class="Menu__Container-sc-mw2r80-0 fNZZph"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu position left 1`] = `
<div
  class="Menu__Container-sc-mw2r80-0 hcJyrK"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu position left closed 1`] = `
<div
  class="Menu__Container-sc-mw2r80-0 iFehMP"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;
